<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item android:id="@+id/menu_search_station"
          android:icon="@drawable/ic_station_serach_icon"
          android:title="@string/menu_search_station"
          android:showAsAction="collapseActionView|ifRoom" 
          android:actionViewClass="android.widget.SearchView"
    />
         
     <!-- TODO : TEMPORARILY  this button starts BikeActivity (and sends Intent there) -->
    <item android:id="@+id/menu_search_bike"
          android:icon="@drawable/ic_plain_bicycle_icon_large"
          android:title="@string/menu_search_bike"
          android:showAsAction="collapseActionView|ifRoom"
           />
    
    <item android:id="@+id/menu_new_message"
          android:icon="@drawable/icon_new_message"
          android:title="@string/menu_new_message"
          android:showAsAction="collapseActionView|ifRoom"
           />
    
    <item android:id="@+id/menu_search_message"
          android:icon="@drawable/icon_search_message"
          android:title="@string/menu_search_message"
          android:showAsAction="collapseActionView|ifRoom"
           />
    
    <!-- Message filter option for tab2 -->
    <item
        android:id="@+id/menu_filter_message"
        android:icon="@drawable/icon_message_filter"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_filter_message"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
